---
source: spade-tests/src/typeinference.rs
---
entity name(x: &mut [bool; 10]) -> int<32> {
    x[0]
}


error: Index target must be an array, got &mut [bool; 10]
  ┌─ testinput:2:5
  │
2 │     x[0]
  │     ^ Expected array
  │
  = note: Expected [_; _]
               Got &mut [bool; 10]


